k8s/apps/registry-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-ui
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-ui
  template:
    metadata:
      labels:
        app: registry-ui
    spec:
      containers:
        - name: registry-ui
          image: joxit/docker-registry-ui:main
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: default
spec:
  selector:
    app: registry-ui
  ports:
    - port: 80
      targetPort: 80
